--- a/src/main/resources/assets/splanade/lang/en_us.json
+++ b/src/main/resources/assets/splanade/lang/en_us.json
@@ -8,7 +8,9 @@
   "item.splanade.tenebrite_helmet": "Tenebrite Helmet",
   "item.splanade.tenebrite_leggings": "Tenebrite Leggings",
   "item.splanade.tenebrite_solution_potion": "Tenebrite Solution",
+  "item.splanade.crystallised_tenebrite_solution_potion": "Crystallised Tenebrite Solution",
   "item.splanade.tenebrite_solution_potion.tooltip": "Poison V (00:05)",
+  "item.splanade.crystallised_tenebrite_solution_potion.tooltip": "Poison V (00:05)",
 
   "block.splanade.refined_tenebrite_block": "Refined Tenebrite Block",
   "block.splanade.tenebrite_ore": "Tenebrite Ore",
