--- a/src/main/resources/assets/splanade/lang/en_us.json
+++ b/src/main/resources/assets/splanade/lang/en_us.json
@@ -10,12 +10,10 @@
   "item.splanade.tenebrite_solution_potion": "Tenebrite Solution",
   "item.splanade.crystallised_tenebrite_solution_potion": "Crystallised Tenebrite Solution",
   "item.splanade.tenebrite_solution_potion.tooltip": "Poison V (00:05)",
-  "item.splanade.crystallised_tenebrite_solution_potion.tooltip": "Poison V (00:05)",
+  "item.splanade.crystallised_tenebrite_solution_potion.tooltip": "Rightclick to empity the bottle",
 
   "block.splanade.refined_tenebrite_block": "Refined Tenebrite Block",
   "block.splanade.tenebrite_ore": "Tenebrite Ore",
-
-  "tooltip.splanade.tenebrite_dust": "A fine powder. Maybe it needs to be processed in some way to be useful.",
 
   "creativetab.splanade_tab": "Splanade"
 }
